RESOLVED FIXED278640
Fix ElementDescendantIterator assertions after 282688@main
https://bugs.webkit.org/show_bug.cgi?id=278640
Summary Fix ElementDescendantIterator assertions after 282688@main
Chris Dumez
Reported 2024-08-25 21:16:35 PDT
Fix ElementDescendantIterator assertions after 282688@main.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-25 21:17:24 PDT
Chris Dumez
Comment 2 2024-08-25 21:18:18 PDT
EWS
Comment 3 2024-08-25 21:32:40 PDT
Committed 282720@main (905605a79e14): <https://commits.webkit.org/282720@main> Reviewed commits have been landed. Closing PR #32697 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.