Fix ElementDescendantIterator assertions after 282688@main https://bugs.webkit.org/show_bug.cgi?id=278640 rdar://134675393

Reviewed by Ross Kirsling.

* Source/WebCore/dom/TypedElementDescendantIteratorInlines.h:
(WebCore::InclusiveElementDescendantRange<ElementType>::beginAt const):
(WebCore::InclusiveElementDescendantRange<ElementType>::from const):

Canonical link: https://commits.webkit.org/282720@main